WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
312113
WKWebView._cachedActiveNSURL doesn't need to store the WTF::URL
https://bugs.webkit.org/show_bug.cgi?id=312113
Summary
WKWebView._cachedActiveNSURL doesn't need to store the WTF::URL
Chris Dumez
Reported
2026-04-12 18:45:58 PDT
WKWebView._cachedActiveNSURL doesn't need to store the WTF::URL, just its String presentation.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2026-04-12 18:47:06 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62604
EWS
Comment 2
2026-04-12 22:12:19 PDT
Committed
311048@main
(c3db1aa95219): <
https://commits.webkit.org/311048@main
> Reviewed commits have been landed. Closing PR #62604 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-04-12 22:13:12 PDT
<
rdar://problem/174632365
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug