WKWebView._cachedActiveNSURL doesn't need to store the WTF::URL https://bugs.webkit.org/show_bug.cgi?id=312113

Reviewed by Darin Adler.

WKWebView._cachedActiveNSURL doesn't need to store the WTF::URL, just
its String presentation.

* Source/WebKit/UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView URL]):
* Source/WebKit/UIProcess/API/Cocoa/WKWebViewInternal.h:

Canonical link: https://commits.webkit.org/311048@main