Source/WebKit/UIProcess/API/Cocoa/WKWebViewInternal.h
@@ -534,7 +534,7 @@ struct PerWebProcessState {
 
     RetainPtr<WKScrollGeometry> _currentScrollGeometry;
 
-    std::pair<URL, RetainPtr<NSURL>> _cachedActiveNSURL;
+    std::pair<String, RetainPtr<NSURL>> _cachedActiveNSURL;
 
     BOOL _allowsMagnification;
 
